# ark

./: .dockerignore  .gitignore  Dockerfile  LICENSE.txt  MANIFEST.in  README.md  app.py  ark_run.py  environment.yml  main.py  requirements.txt  setup.cfg  version.py
api/: app.py  config.py  logging.py  logging_utils.py  storage.py  utils.py
api/configs/: density.json  empty.json  mirai.json  sybil.json
api/tests/: test_app.py  test_utils.py
ark/: __init__.py  containers.py  utils.py
ark/preprocessing/: filters.py  transformers.py
ark/preprocessing/tests/: test_filters.py  test_transformers.py
ark/test_data/test_series/: 1.2.840.113654.2.55.11775696401796461604971247479941885359  1.2.840.113654.2.55.13646712988573949425993321634931479588  1.2.840.113654.2.55.15962208464940665451595350392070559339  1.2.840.113654.2.55.16570443840207205469175905072401591525  1.2.840.113654.2.55.2410737131461975314848311291184847405
ark/tests/: test_containers.py  test_utils.py
demo/: demo.py  utils.py
docker/: empty.Dockerfile  mirai.Dockerfile  mirai_orthanc.Dockerfile  sybil.Dockerfile  sybil_orthanc.Dockerfile
docs/: Mirai Demo.docx
model/: model.py  onconet_wrapper.py  oncoqueries_wrapper.py  transformers.py  utils.py
model/tests/: test_utils.py
models/: __init__.py  base.py  density.py  mirai.py  onconet_wrapper.py  sybil.py  utils.py
models/tests/: test_utils.py
orthanc/: orthanc.json  rest_listener.py  start_ark_orthanc.sh
static/: index.html  script.js  style.css
templates/: index.html
