# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[metadata]
name = ark
description = Simple web server for hosting deep learning models
author = Jacob Silterra, Harrison Le
author_email = silterra@mit.edu
license_file = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
version = attr: version.__version__
project_urls =
    Documentation = https://github.com/reginabarzilaygroup/ark/wiki
    Source = https://github.com/reginabarzilaygroup/ark

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Programming Language :: Python
    License :: OSI Approved :: MIT License

[easy_install]
find_links =
    https://download.pytorch.org/whl/cu117/torch_stable.html

[options]
zip_safe = False
packages = find:
include_package_data = True
py_modules = version, ark_run
python_requires = >=3.8,<3.11
# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
# Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
# new major versions. This works if the required packages follow Semantic Versioning.
# For more information, check out https://semver.org/.
install_requires =
    coverage<6.0
    coverage-badge==1.1.0
    Werkzeug>=2.2,<3.0
    flask==2.2.5
    gunicorn==22.0.0
    python-dotenv==1.0.0
    requests==2.31.0
    requests-file==1.5.1
    setuptools>=65.5.1
    tqdm==4.62.3

# Include config files
[options.package_data]
* = *.json


[options.extras_require]
# Can select different models to host
mirai =
    onconet @ git+https://github.com/reginabarzilaygroup/mirai@main
sybil =
    sybil @ git+https://github.com/reginabarzilaygroup/sybil@main

[options.entry_points]
console_scripts =
    ark-run = ark_run:cli_entrypoint
    ark-run-empty = ark_run:cli_entrypoint_empty
    ark-run-mirai = ark_run:cli_entrypoint_mirai
    ark-run-sybil = ark_run:cli_entrypoint_sybil



